Alterações em css, colocar cenas escondidas e alteração na migração para aparecer fotos

--- a/TrabPrático/Views/Jogos/Details.cshtml
+++ b/TrabPrático/Views/Jogos/Details.cshtml
@@ -97,7 +97,7 @@
     </div>
 }
 <div>
-    <a class="textoCor" asp-action="Edit" asp-route-id="@Model.IdJogo">Editar</a>
-    <a class="textoCor" asp-action="Delete" asp-route-id="@Model.IdJogo">Eliminar</a>
-    <a class="textoCor" asp-action="Index">Voltar á lista</a>
+    <a hidden class="textoCor" asp-action="Edit" asp-route-id="@Model.IdJogo">Editar</a>
+    <a hidden class="textoCor" asp-action="Delete" asp-route-id="@Model.IdJogo">Eliminar</a>
+    <a class="textoCor" asp-action="Index">Voltar à lista</a>
 </div>
