--- a/TrabPrático/Views/Lojas/Details.cshtml
+++ b/TrabPrático/Views/Lojas/Details.cshtml
@@ -44,6 +44,6 @@
     </dl>
 </div>
 <div>
-    <a class="textoCor" style="object-fit: fill; color: white" asp-action="Edit" asp-route-id="@Model.IdLoja">Editar</a> |
-    <a class="textoCor" asp-action="Index">Voltar á lista</a>
+    <a hidden class="textoCor" style="object-fit: fill; color: white" asp-action="Edit" asp-route-id="@Model.IdLoja">Editar</a> |
+    <a class="textoCor" asp-action="Index">Voltar à lista</a>
 </div>
