--- a/TrabPrático/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TrabPrático/Areas/Identity/Pages/Account/Login.cshtml
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-group">
                     <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
+                        <label style="color:white" asp-for="Input.RememberMe">
                             <input asp-for="Input.RememberMe" />
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
                         </label>
