--- a/TrabPrático/Views/Jogos/Create.cshtml
+++ b/TrabPrático/Views/Jogos/Create.cshtml
@@ -4,41 +4,41 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1 style="color:white">Create</h1>
 
-<h4>Jogos</h4>
+<h4 style="color:white">Jogos</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
+                <label style="color:white" asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Tipo" class="control-label"></label>
+                <label style="color:white" asp-for="Tipo" class="control-label"></label>
                 <input asp-for="Tipo" class="form-control" />
                 <span asp-validation-for="Tipo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CategoriaIdade" class="control-label"></label>
+                <label style="color:white" asp-for="CategoriaIdade" class="control-label"></label>
                 <input asp-for="CategoriaIdade" class="form-control" />
                 <span asp-validation-for="CategoriaIdade" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Nota" class="control-label"></label>
+                <label style="color:white" asp-for="Nota" class="control-label"></label>
                 <input asp-for="Nota" class="form-control" />
                 <span asp-validation-for="Nota" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DataLancamento" class="control-label"></label>
+                <label style="color:white" asp-for="DataLancamento" class="control-label"></label>
                 <input asp-for="DataLancamento" class="form-control" />
                 <span asp-validation-for="DataLancamento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Imagem" class="control-label"></label>
+                <label style="color:white" asp-for="Imagem" class="control-label"></label>
                 <input asp-for="Imagem" class="form-control" />
                 <span asp-validation-for="Imagem" class="text-danger"></span>
             </div>
@@ -60,7 +60,7 @@
 </div>
 
 <div>
-    <a class="textoCor" asp-action="Index">Voltar á lista</a>
+    <a class="textoCor" asp-action="Index">Voltar à lista</a>
 </div>
 
 @section Scripts {
