--- a/TrabPrático/Views/Lojas/Create.cshtml
+++ b/TrabPrático/Views/Lojas/Create.cshtml
@@ -4,31 +4,31 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1 style="color:white">Create</h1>
 
-<h4>Loja</h4>
+<h4 style="color:white">Loja</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
+                <label  style="color:white" asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImagemLoja" class="control-label"></label>
+                <label style="color:white" asp-for="ImagemLoja" class="control-label"></label>
                 <input asp-for="ImagemLoja" class="form-control" />
                 <span asp-validation-for="ImagemLoja" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Link" class="control-label"></label>
+                <label style="color:white" asp-for="Link" class="control-label"></label>
                 <input asp-for="Link" class="form-control" />
                 <span asp-validation-for="Link" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="JogoFK" class="control-label"></label>
+                <label style="color:white" asp-for="JogoFK" class="control-label"></label>
                 <select asp-for="JogoFK" class ="form-control" asp-items="ViewBag.JogoFK"></select>
             </div>
             <div class="form-group">
