--- a/TrabPrático/Views/Shared/_Layout.cshtml
+++ b/TrabPrático/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         <li class="nav-item">
                             <a class="textoCor" asp-area="" asp-controller="Lojas" asp-action="Index">Loja</a>
                         </li>
-                        <li class="nav-item">
+                        <li hidden class="nav-item">
                             <a class="textoCor" asp-area="" asp-controller="Reviews" asp-action="Privacy">Reviews</a>
                         </li>
                     </ul>
